# llvm-ecb

./: CMakeLists.txt  INSTALL  README  TODO
src/: CMakeLists.txt  llvm-ecb.c  llvm-ecb.h.in
src/core/: asm.cpp  asm.h  module.cpp  module.h  target.cpp  target.h  value.cpp  value.h
src/support/: CMakeLists.txt  support.cpp  support.h
